--- a/mini/src/app/nav-bar/nav-bar.component.html
+++ b/mini/src/app/nav-bar/nav-bar.component.html
@@ -28,7 +28,7 @@
             <a class="nav-link underline">Contact Us</a>
           </li>
         </ul>
-        
+        kkkkk
       </div>
     </div>
   </nav>
