--- a/mini/src/app/nav-bar/nav-bar.component.html
+++ b/mini/src/app/nav-bar/nav-bar.component.html
@@ -29,11 +29,11 @@
           </li>
         </ul>
         
-      </div>hhhh
+      </div>
     </div>
   </nav>
   
-  thank you
+  thank you....!
 
 
 </div>
